--- a/lib/components/oops_svg.html
+++ b/lib/components/oops_svg.html
@@ -12,12 +12,12 @@
 
     <!-- custom <oopsSvg template> -->
 
-    <svg width="140000" height="170" style="border: double">
+    <svg id="ansvg" width="140000" height="170" style="border: double">
       <title>Forecast</title>
       <text x="0" y="170">1880</text>
       <text x="100" y="170">1890</text>
       <text x="200" y="170">1900</text>
-      <text x="300" y="170">1910</text>
+      <text id="moo" x="300" y="170">1910</text>
       <g id="leadbar">
         <rect
            style="fill:#916f6f;fill-opacity:0.87391304;stroke:#130e14;stroke-opacity:1"
@@ -29,7 +29,7 @@
            ry="2.5253813"
            inkscape:label="#rect4509" />
       </g>
-      <use xlink:href="#leadbar" x="50" y="50"/>
+      <use class="lbcopy" xlink:href="#leadbar" x="50" y="50"/>
     </svg>
 
     <!-- end <oopsSvg template> -->
